// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchComponent should have a proper style generator 1`] = `
Object {
  "blueButton": Object {
    "&:hover": Object {
      "backgroundColor": "test3",
    },
    "backgroundColor": "test2",
    "color": "test4",
  },
  "searchButton": Object {
    "test1": Object {
      "paddingLeft": 32,
    },
  },
  "sideBar": Object {
    "test1": Object {
      "marginTop": -16,
      "paddingLeft": 32,
    },
  },
}
`;

exports[`AdvancedSearchComponent should have a proper style generator 2`] = `
Object {
  "blueButton": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
  "searchButton": Object {
    "test1": Object {
      "paddingLeft": 32,
    },
  },
  "sideBar": Object {
    "test1": Object {
      "marginTop": -16,
      "paddingLeft": 32,
    },
  },
}
`;

exports[`AdvancedSearchComponent should have a proper style generator 3`] = `
Object {
  "blueButton": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
  "searchButton": Object {
    "test1": Object {
      "paddingLeft": 32,
    },
  },
  "sideBar": Object {
    "test1": Object {
      "marginTop": -16,
      "paddingLeft": 32,
    },
  },
}
`;

exports[`AdvancedSearchComponent should render advanced search docTypes with checked values based on fixed invalid props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              docTypes={
                Array [
                  "179",
                  "202",
                ]
              }
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              "179",
              "202",
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search docTypes with checked values based on props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              docTypes={
                Array [
                  179,
                  202,
                ]
              }
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              179,
              202,
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search row based on props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search with no valid checked docTypes based on invalid props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              docTypes={
                Array [
                  "test",
                  202,
                ]
              }
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              "test",
              202,
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should render date range fields 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={true}
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DateRangeField)
              className="publicationyearrange menuitem"
              disableFuture={true}
              disabled={false}
              format="DD/MM/YYYY"
              locale={
                Object {
                  "ariaLabel": "Add valid date ranges to search between",
                  "captionFn": [Function],
                  "captionTitle": "Created",
                  "combiner": "between",
                  "isUnpublishedField": true,
                  "order": 22,
                  "title": "Created date range",
                  "type": null,
                  "validation": Array [],
                }
              }
              onChange={[Function]}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DateRangeField)
              className="publicationyearrange menuitem"
              disableFuture={true}
              disabled={false}
              format="DD/MM/YYYY"
              locale={
                Object {
                  "ariaLabel": "Add valid date ranges to search between",
                  "captionFn": [Function],
                  "captionTitle": "Updated",
                  "combiner": "between",
                  "isUnpublishedField": true,
                  "order": 23,
                  "title": "Updated date range",
                  "type": null,
                  "validation": Array [],
                }
              }
              onChange={[Function]}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should render default view 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={false}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should render default view with open access checked 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should render minimised view 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Show advanced search"
          onClick={[Function]}
          tooltip="Show advanced search"
        >
          <KeyboardArrowDownIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`AdvancedSearchComponent should toggle minimised view for advanced search 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          variant="h5"
        >
          Advanced search
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Hide advanced search"
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <KeyboardArrowUpIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeMultipleField)
              className="displaytype menuitem"
              disabled={false}
              value={Array []}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <PublicationYearRangeField
              className="publicationyearrange menuitem"
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={
                <ForwardRef(WithStyles)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={false}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smDown={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;
